# rk3399_build_python

./: .gitignore  CHANGELOG.md  CLAUDE.md  KERNEL_BUILD_QUICKSTART.md  MIGRATION_REPORT.md  PROGRESS.md  QUICK_REFERENCE.md  README.md  pyproject.toml  replace_boot.sh
.claude/: settings.local.json
docs/: BOOT_REPLACE_GUIDE.md  CLEAN_QUICK_START.md  DESKTOP_DEFAULT_SUMMARY.md  DESKTOP_UPDATE.md  FIRMWARE_MIGRATION.md  FLASH_GUIDE.md  KERNEL_BUILD_FLASH.md  PHASE2_SUMMARY.md  ROOTFS_IMPLEMENTATION_SUMMARY.md  ROOTFS_QUICKSTART.md  SUMMARY.md  VERIFICATION_REPORT.md  bootloader_build_guide.md  build_script_usage.md  clean_guide.md  kernel_build_guide.md  kernel_rootfs_mount_guide.md  loaderimage_tutorial.md  root_partition_guide.md  rootfs_build_guide.md  uboot_build_guide.md
scripts/: build.sh  build_all.py  build_bootloader.py  build_kernel.py  build_rootfs.py  build_uboot.py  clean.py  flash_bootloader.sh  make_bootimg.sh
src/rkpyimg/: __init__.py
src/rkpyimg/cli/: __init__.py  main.py
src/rkpyimg/core/: __init__.py  checksum.py  header.py  ini_parser.py  rc4.py
src/rkpyimg/image/: __init__.py  builder.py  partition.py
src/rkpyimg/tools/: __init__.py  boot_merger.py  loaderimage.py  rksd.py  trust_merger.py
test_data/: VERIFICATION_REPORT.md
test_data/RKBOOT/: rk33
tests/: __init__.py  test_header.py  test_ini_parser.py  test_loaderimage.py
