[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rkpyimg"
version = "0.1.0"
description = "Complete RK3399 build system with pure Python firmware packing tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "rockchip",
    "rk3399",
    "embedded",
    "linux",
    "firmware",
    "bootloader",
    "u-boot",
    "orangepi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Boot",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Embedded Systems",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
rkpyimg = "rkpyimg.cli.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/rkpyimg"
Documentation = "https://github.com/yourusername/rkpyimg#readme"
Repository = "https://github.com/yourusername/rkpyimg"
Issues = "https://github.com/yourusername/rkpyimg/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rkpyimg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["rkpyimg"]
